--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,12 @@
 
       <div class="order-lg-2 nav-btns">
         <button type="button" class="btn position-relative">
-          <i class="fa fa-shopping-cart"></i>
-          <span class="position-absolute top-0 start-100 translate-middle badge bg-primary">5</span>
+          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+          <span class="position-absolute top-0 start-100 translate-middle badge bg-primary countItem"></span>
         </button>
         <button type="button" class="btn position-relative">
           <i class="fa fa-heart"></i>
-          <span class="position-absolute top-0 start-100 translate-middle badge bg-primary">2</span>
+          <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
         </button>
         <button type="button" class="btn position-relative">
           <i class="fa fa-search"></i>
@@ -386,7 +386,7 @@
           <div class="text-center">
             <p class="text-capitalize mt-3 mb-1">gray shirt</p>
             <span class="fw-bold d-block">36.50</span>
-            <a href="#" class="btn btn-danger mt-3">Add to Cart</a>
+            <button class="btn btn-danger mt-3 addToShoppingCart">Add to Cart</button>
           </div>
         </div>
 
@@ -398,9 +398,9 @@
             </span>
           </div>
           <div class="text-center">
-            <p class="text-capitalize mt-3 mb-1">gray shirt</p>
+            <p class="text-capitalize mt-3 mb-1">red shirt</p>
             <span class="fw-bold d-block">33.50</span>
-            <a href="#" class="btn btn-danger mt-3">Add to Cart</a>
+            <button class="btn btn-danger mt-3 addToShoppingCart">Add to Cart</button>
           </div>
         </div>
 
@@ -412,9 +412,9 @@
             </span>
           </div>
           <div class="text-center">
-            <p class="text-capitalize mt-3 mb-1">gray shirt</p>
+            <p class="text-capitalize mt-3 mb-1">blue shirt</p>
             <span class="fw-bold d-block">37.50</span>
-            <a href="#" class="btn btn-danger mt-3">Add to Cart</a>
+            <button class="btn btn-danger mt-3 addToShoppingCart">Add to Cart</button>
           </div>
         </div>
 
@@ -426,9 +426,9 @@
             </span>
           </div>
           <div class="text-center">
-            <p class="text-capitalize mt-3 mb-1">gray shirt</p>
+            <p class="text-capitalize mt-3 mb-1">black shirt</p>
             <span class="fw-bold d-block">45.50</span>
-            <a href="#" class="btn btn-danger mt-3">Add to Cart</a>
+            <button class="btn btn-danger mt-3 addToShoppingCart">Add to Cart</button>
           </div>
         </div>
 
