--- a/src/login.html
+++ b/src/login.html
@@ -61,6 +61,9 @@
                 </form>
 
                 <div class="login-signup">
+                  <button type="button" onclick="location.href='index.html'">
+                    <i class="fa fa-rotate-back" ></i>
+                  </button>
                     <span class="text">Not a member?
                         <a href="#" class="text signup-link">Signup now</a>
                     </span>
@@ -139,7 +142,7 @@
     <!-- Bootstrap JS-->
     <script type="module" src="../bootstrap-5.2.1-dist\js\bootstrap.min.js"></script>
     <!-- Custom JS -->
-    <script src="../src/assets/js/main.js"></script>
+    <script src="../src/assets/js/login.js"></script>
 
 </body>
 
